@@ -25,6 +25,7 @@ Version 1.3.13+svn:
      could lead to an infinite loop (bug #10112)
  * user interface
    * the apple key works as shortcut modifier again (bug #10586)
+   * made "Show lobby joins of friends only" the default preference
  * WML engine:
    * Fixed a problem where two [recall]s in a SP game could get an out of sync
      recruitment
